--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d6e73108",
+   "id": "39e490b1",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "488d6661",
+   "id": "d53c8c39",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "edd4ef64",
+   "id": "83266fd3",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d04faa8b",
+   "id": "53e2571f",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "42734cbd",
+   "id": "dff451a7",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2b593ddc",
+   "id": "01eef8ae",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8b967ec7",
+   "id": "435ac27c",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ac411555",
+   "id": "1e8349ec",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "898657b8",
+   "id": "8d0878c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "260828f2",
+   "id": "c2fd4124",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,8 +194,10 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "cfbaeb13",
-   "metadata": {},
+   "id": "78d7fc8a",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -223,10 +225,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db32e3a3",
+   "id": "9912f702",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 50\n",
+    "input= print(\"Guess the number: \")\n",
+    "if int.input "
+   ]
   }
  ],
  "metadata": {
