--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "58293bf6",
+   "id": "aa5ab1ef",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "95324f15",
+   "id": "01cdd762",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "12c491d0",
+   "id": "58c4c784",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23ca2a67",
+   "id": "854cbb20",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7e1f993f",
+   "id": "2949a108",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6c2aeeb3",
+   "id": "69652255",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d4e2099c",
+   "id": "d02d9e7b",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "60690ebb",
+   "id": "0ff36173",
    "metadata": {},
    "outputs": [
     {
@@ -169,8 +169,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "89b3f5e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the integer number10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = input(\"enter the integer number\")\n",
+    "print (number)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "393948d4",
+   "id": "a065ac43",
    "metadata": {},
    "outputs": [],
    "source": []
