--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "72c09dc6",
+   "id": "c310ab84",
    "metadata": {},
    "outputs": [
     {
@@ -339,11 +339,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "id": "e1feb78f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 100\n",
+    "type (x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "28d20545",
+   "id": "ea925f4d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 100"
+   ]
   }
  ],
  "metadata": {
