--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d9df90e9",
+   "id": "e0ee6a15",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "626b5923",
+   "id": "13ee8170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "02dd1a2a",
+   "id": "4aa8bf84",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5b1a3d5e",
+   "id": "88c236ad",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a926ba91",
+   "id": "519f6c96",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57a47a81",
+   "id": "568fb200",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "68196962",
+   "id": "4cceaa28",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "075f84a3",
+   "id": "afe896ef",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ecb3dddb",
+   "id": "c8f8a2e8",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e88e04d7",
+   "id": "f6b4de13",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "915726c1",
+   "id": "3638e2ef",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e0988fee",
+   "id": "61976cfb",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f7123a60",
+   "id": "52e56053",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0a91431c",
+   "id": "ec00ae10",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "50f042a0",
+   "id": "21a51e63",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3eb6ec42",
+   "id": "442acca6",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "388cf29e",
+   "id": "ea437eeb",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "21140838",
+   "id": "ccaee53e",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "49ddc00a",
+   "id": "c9abecbb",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3ffe8e93",
+   "id": "4f9c4c3a",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "bd3c8fcb",
+   "id": "94de25d5",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8865418e",
+   "id": "cd755792",
    "metadata": {},
    "outputs": [
     {
@@ -477,15 +477,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6f95b8",
+   "id": "a2a3fb38",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "number = 5\n",
+    "guess = input('Chose a number between 0 and 20')\n",
+    "if guess==number\n",
+    "    print('Good guess!')\n",
+    "if guess>nu"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b65abeda",
+   "id": "145bf93e",
    "metadata": {},
    "outputs": [],
    "source": []
