--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -139,8 +139,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "17a4008c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I chosed a number, try to guess it: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Guessing game\n",
+    "x = 50\n",
+    "y = input ('I chosed a number, try to guess it: ')\n",
+    "if x = "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e6f610c3",
+   "id": "524c8b45",
    "metadata": {},
    "outputs": [],
    "source": []
