--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e461358",
+   "id": "9464dcbc",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "098d0cee",
+   "id": "b01a3da7",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6eaaa167",
+   "id": "10339aee",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dd393a72",
+   "id": "06e572c3",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "45c40372",
+   "id": "a50c41a8",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f2fb9481",
+   "id": "cda72402",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d422894f",
+   "id": "0c18f00d",
    "metadata": {},
    "outputs": [
     {
@@ -223,13 +223,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b66f294",
+   "id": "688d4df4",
    "metadata": {},
    "outputs": [],
    "source": [
     "number = 50\n",
     "print(number ' Ops! a hint')\n",
-    "\n"
+    "guess = input('what was the number: ')\n",
+    "if guess == number:\n",
+    "    print('You got it!')\n",
+    "elif guess < number:\n",
+    "    print('Too low!')\n",
+    "elif guess > number:\n",
+    "    print('')"
    ]
   }
  ],
