--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aa5ab1ef",
+   "id": "66081e66",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "01cdd762",
+   "id": "17af6090",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "58c4c784",
+   "id": "4d80332d",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "854cbb20",
+   "id": "43f6f52f",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2949a108",
+   "id": "96e3c976",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "69652255",
+   "id": "52f72519",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d02d9e7b",
+   "id": "4af274b8",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0ff36173",
+   "id": "73790787",
    "metadata": {},
    "outputs": [
     {
@@ -169,28 +169,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "89b3f5e9",
+   "execution_count": 37,
+   "id": "f1d335d2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the integer number10\n",
-      "10\n"
+      "enter the integer number : 32\n",
+      "32\n",
+      "3232\n"
      ]
     }
    ],
    "source": [
-    "number = input(\"enter the integer number\")\n",
+    "number = input(\"enter the integer number : \")\n",
+    "print (number)\n",
+    "int (number)\n",
+    "number += number\n",
     "print (number)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a065ac43",
+   "id": "c1a525fd",
    "metadata": {},
    "outputs": [],
    "source": []
