--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "39e490b1",
+   "id": "10d1f78e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d53c8c39",
+   "id": "c316724d",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "83266fd3",
+   "id": "2bcaed01",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "53e2571f",
+   "id": "2be87ec2",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dff451a7",
+   "id": "308861e7",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "01eef8ae",
+   "id": "58a4a809",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "435ac27c",
+   "id": "b67b91b4",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1e8349ec",
+   "id": "a220cfa6",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d0878c9",
+   "id": "896c74cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2fd4124",
+   "id": "8831a1fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "78d7fc8a",
+   "id": "9f83ce37",
    "metadata": {
     "scrolled": true
    },
@@ -224,15 +224,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9912f702",
+   "execution_count": 45,
+   "id": "611b2a1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess the number: 49\n",
+      "Too low!\n"
+     ]
+    }
+   ],
    "source": [
     "x = 50\n",
-    "input= print(\"Guess the number: \")\n",
-    "if int.input "
+    "y = input (\"Guess the number: \")\n",
+    "if int(y) == x:\n",
+    "    print(\"You got it!\")\n",
+    "elif int(y) < x:\n",
+    "    print(\"Too low!\")\n",
+    "elif int(y) > x:\n",
+    "    print(\"Too high!\")\n",
+    "elif int(y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20596126",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
