--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c310ab84",
+   "id": "4f2843be",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e1feb78f",
+   "id": "8e3d4489",
    "metadata": {},
    "outputs": [
     {
@@ -361,13 +361,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "id": "79d977f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 100\n",
+    "x\n",
+    "number = input(Enter the number)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ea925f4d",
+   "id": "3f9dbcad",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = 100"
-   ]
+   "source": []
   }
  ],
  "metadata": {
