--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10785529",
+   "id": "87da519e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "05cf9f18",
+   "id": "5e42e6df",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "86f7601a",
+   "id": "98b2276b",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "daa785fe",
+   "id": "15d64631",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3b8b562d",
+   "id": "47ba09fd",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ca5cf453",
+   "id": "bdf283f1",
    "metadata": {},
    "outputs": [
     {
@@ -140,13 +140,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "0af4654a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(...)? (83354569.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[45], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    print x\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(...)?\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a8f0cb23",
+   "id": "45fa9265",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 10\n",
-    "pr"
+    "x = input ('Enter a number: ')\n",
+    "if x == 10 :\n",
+    "    print('you got it')\n",
+    "elif x < 10 :\n",
+    "    print ('Too low')\n",
+    "elif x >= 'ahmed' and company== 'cisco':\n",
+    "    print ('Hello Colleague')\n",
+    "else: \n",
+    "    print ('Hello, who are you')"
    ]
   }
  ],
