--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -139,15 +139,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "17a4008c",
+   "execution_count": 37,
+   "id": "548a7480",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I chosed a number, try to guess it: 5\n"
+      "I chosed a number, try to guess it: 40\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m==\u001b[39m y:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou got it!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtoo low!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'int' and 'str'"
      ]
     }
    ],
@@ -155,13 +166,19 @@
     "# Guessing game\n",
     "x = 50\n",
     "y = input ('I chosed a number, try to guess it: ')\n",
-    "if x = "
+    "y = i\n",
+    "if x == y:\n",
+    "    print ('You got it!')\n",
+    "elif x > y:\n",
+    "    print ('too low!')\n",
+    "else:\n",
+    "    print ('too high!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "524c8b45",
+   "id": "dd38272a",
    "metadata": {},
    "outputs": [],
    "source": []
