--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "10d1f78e",
+   "id": "5c1becfe",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c316724d",
+   "id": "a4c15867",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2bcaed01",
+   "id": "7da53164",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2be87ec2",
+   "id": "eb8438fd",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "308861e7",
+   "id": "367412fc",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "58a4a809",
+   "id": "6953539e",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b67b91b4",
+   "id": "94c01c95",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a220cfa6",
+   "id": "e512b270",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "896c74cb",
+   "id": "730b5a2c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8831a1fc",
+   "id": "380c54dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9f83ce37",
+   "id": "b758aad0",
    "metadata": {
     "scrolled": true
    },
@@ -224,19 +224,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "611b2a1e",
+   "execution_count": null,
+   "id": "695e7320",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Guess the number: 49\n",
-      "Too low!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 50\n",
     "y = input (\"Guess the number: \")\n",
@@ -245,14 +236,13 @@
     "elif int(y) < x:\n",
     "    print(\"Too low!\")\n",
     "elif int(y) > x:\n",
-    "    print(\"Too high!\")\n",
-    "elif int(y)"
+    "    print(\"Too high!\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20596126",
+   "id": "b3a8ae5e",
    "metadata": {},
    "outputs": [],
    "source": []
