--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "66081e66",
+   "id": "57691434",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "17af6090",
+   "id": "42cec6ad",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4d80332d",
+   "id": "98761308",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43f6f52f",
+   "id": "b54e26dc",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "96e3c976",
+   "id": "397fc980",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "52f72519",
+   "id": "7993e6f7",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4af274b8",
+   "id": "42d9f1fa",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "73790787",
+   "id": "ee33e30c",
    "metadata": {},
    "outputs": [
     {
@@ -169,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "f1d335d2",
+   "execution_count": 38,
+   "id": "13f3866a",
    "metadata": {},
    "outputs": [
     {
@@ -179,22 +179,23 @@
      "text": [
       "enter the integer number : 32\n",
       "32\n",
-      "3232\n"
+      "64\n"
      ]
     }
    ],
    "source": [
     "number = input(\"enter the integer number : \")\n",
-    "print (number)\n",
-    "int (number)\n",
-    "number += number\n",
-    "print (number)"
+    "number = int (number)\n",
+    "number2 = input{'guess the number you entered : '}\n",
+    "number2 = int (number2)\n",
+    "if number == number2 :\n",
+    "    print (number)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1a525fd",
+   "id": "9e26415e",
    "metadata": {},
    "outputs": [],
    "source": []
