--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4df57c0a",
+   "id": "eba73ca0",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3b50e8f9",
+   "id": "8ae707f9",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c0bea29",
+   "id": "6947cb3a",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d79c0c",
+   "id": "7a70ae1b",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6e9ae00a",
+   "id": "ae2dc1f7",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "56adf786",
+   "id": "d7fca7a4",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2f24fab5",
+   "id": "4f39a137",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "678c3a03",
+   "id": "f4ad85f7",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a348fe0e",
+   "id": "4ccd0909",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "26fa1e99",
+   "id": "df903b32",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2fbfaf2c",
+   "id": "173c3213",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5ab1954a",
+   "id": "902a0819",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "45eea76a",
+   "id": "660ba5e3",
    "metadata": {},
    "outputs": [
     {
@@ -279,16 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "b937b34b",
+   "execution_count": 52,
+   "id": "5a9abc34",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(...)? (3033123231.py, line 5)",
+     "evalue": "unterminated string literal (detected at line 11) (3210278690.py, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[48], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    print x\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(...)?\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[52], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    print('You\\'ve got it!)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 11)\n"
      ]
     }
    ],
@@ -297,13 +297,19 @@
     "print(f'Hint: {num}')\n",
     "x = input('Guess the number:')\n",
     "x = int(x)\n",
-    "print x"
+    "\n",
+    "if x>num:\n",
+    "    print('Too high!')\n",
+    "elif x<num:\n",
+    "    print('Too low!')\n",
+    "else:\n",
+    "    print('You\\'ve got it!)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e875663",
+   "id": "21bd609d",
    "metadata": {},
    "outputs": [],
    "source": []
