--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f650a987",
+   "id": "e2b33c84",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43c7ece1",
+   "id": "9c943343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0a28e3bf",
+   "id": "28d85b20",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "26859409",
+   "id": "ca538ad7",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "044df42e",
+   "id": "2549ed7e",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eefd3b2e",
+   "id": "3f272323",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "11966a26",
+   "id": "cf147c99",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4b95260c",
+   "id": "8f2f5b93",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e465e24d",
+   "id": "5c00df7c",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4573657a",
+   "id": "69141c21",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a5ac6ffd",
+   "id": "2a0c7e3a",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5f6fb33a",
+   "id": "1dda86c0",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e408ae8d",
+   "id": "20e57d0a",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "493fc1e7",
+   "id": "d9d2cae4",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "51ada437",
+   "id": "575f2a56",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b4b7fceb",
+   "id": "67ee4f3a",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d9558077",
+   "id": "5afd6ae4",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "accb1676",
+   "id": "c875b57c",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "bc7c5a9d",
+   "id": "bf06b76b",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "74359cd0",
+   "id": "ba3c1090",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "581e50e9",
+   "id": "8780da7b",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "44b44827",
+   "id": "5f30663c",
    "metadata": {},
    "outputs": [
     {
@@ -476,32 +476,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "75ebfd70",
+   "execution_count": 67,
+   "id": "ad946664",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chose a number between 0 and 204\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[64], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m guess\u001b[38;5;241m==\u001b[39mnumber:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGood guess!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[43mguess\u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43mnumber\u001b[49m:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mToo high\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:  \n",
-      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'str' and 'int'"
+      "Guess what is the number between 0 and 20?5\n",
+      "Good guess!\n"
      ]
     }
    ],
    "source": [
     "number = 5\n",
-    "guess = input('Chose a number between 0 and 20')\n",
+    "guess = int(input('Guess what is the number between 0 and 20?'))\n",
     "if guess==number:\n",
     "    print('Good guess!')\n",
     "elif guess > number:\n",
@@ -513,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "658067be",
+   "id": "eb4fb21e",
    "metadata": {},
    "outputs": [],
    "source": []
