--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5c1becfe",
+   "id": "754676cd",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4c15867",
+   "id": "28e05d8c",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7da53164",
+   "id": "8f391c83",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eb8438fd",
+   "id": "5011da63",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "367412fc",
+   "id": "76fd1de6",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6953539e",
+   "id": "6b1c0295",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "94c01c95",
+   "id": "9b725a32",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e512b270",
+   "id": "d8270fbb",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "730b5a2c",
+   "id": "eda7d678",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380c54dd",
+   "id": "44376ca1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b758aad0",
+   "id": "0ca52c5c",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "695e7320",
+   "id": "eb7ad269",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
     "if int(y) == x:\n",
     "    print(\"You got it!\")\n",
     "elif int(y) < x:\n",
-    "    print(\"Too low!\")\n",
+    "    print(\"Too low! Try again!\")\n",
     "elif int(y) > x:\n",
     "    print(\"Too high!\")\n"
    ]
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3a8ae5e",
+   "id": "3707d498",
    "metadata": {},
    "outputs": [],
    "source": []
