--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "4f2843be",
+   "id": "a3597974",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8e3d4489",
+   "id": "2f8c3f58",
    "metadata": {},
    "outputs": [
     {
@@ -361,31 +361,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "79d977f6",
+   "execution_count": 75,
+   "id": "3b14c6bc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "Enter the number: 20\n"
+     ]
     }
    ],
    "source": [
     "x = 100\n",
-    "x\n",
-    "number = input(Enter the number)"
+    "print (x)\n",
+    "number = input('Enter the number: ')\n",
+    "if x=='100':\n",
+    "    print"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f9dbcad",
+   "id": "05066e18",
    "metadata": {},
    "outputs": [],
    "source": []
