--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eba73ca0",
+   "id": "cc0912ca",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8ae707f9",
+   "id": "7cb2db88",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6947cb3a",
+   "id": "d052eab0",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a70ae1b",
+   "id": "536e10e1",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ae2dc1f7",
+   "id": "580c9e20",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d7fca7a4",
+   "id": "c5ec2cef",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4f39a137",
+   "id": "dbb9ec94",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f4ad85f7",
+   "id": "756ce7a7",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4ccd0909",
+   "id": "392b0e1e",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "df903b32",
+   "id": "6ed401ed",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "173c3213",
+   "id": "25a3cc28",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "902a0819",
+   "id": "5379225c",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "660ba5e3",
+   "id": "a7f587ca",
    "metadata": {},
    "outputs": [
     {
@@ -279,16 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "5a9abc34",
+   "execution_count": 57,
+   "id": "29db198e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 11) (3210278690.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[52], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    print('You\\'ve got it!)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 11)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hint: 5\n",
+      "Guess the number:5\n",
+      "You've got it!\n"
      ]
     }
    ],
@@ -297,19 +298,19 @@
     "print(f'Hint: {num}')\n",
     "x = input('Guess the number:')\n",
     "x = int(x)\n",
-    "\n",
+    "printype(x)\n",
     "if x>num:\n",
     "    print('Too high!')\n",
     "elif x<num:\n",
     "    print('Too low!')\n",
     "else:\n",
-    "    print('You\\'ve got it!)"
+    "    print('You\\'ve got it!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21bd609d",
+   "id": "50942706",
    "metadata": {},
    "outputs": [],
    "source": []
